force-app/main/default/objects/FieloPLT__Level__c/FieloPLT__Level__c.object-meta.xml
<CustomObject>
    <description>Levels rank Members by including them into different groups (e.g. Gold, Silver, Platinum).</description>
    <label>Level</label>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>