force-app/main/default/objects/FieloPLT__Level__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>Level detailed description.</description>
    <inlineHelpText>Enter an detail description about your Level.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>