force-app/main/default/objects/FieloPLT__Level__c/fields/FieloPLT__ExternalId__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID field that unequivocally identifies some configurable PLT Object records to prevent record duplication. If left blank, it&apos;s automatically completed by a Workflow Rule which concatenes the following: ORG ID + Record ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID field that unequivocally identifies some configurable PLT Object records to prevent record duplication. If left blank, it&apos;s automatically completed by a Workflow Rule which concatenes the following: ORG ID + Record ID.</inlineHelpText>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>