force-app/main/default/objects/FieloPLT__Level__c/fields/FieloPLT__ExternalURL__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ExternalURL__c</fullName>
    <label>External URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>