force-app/main/default/objects/FieloPLT__Level__c/fields/FieloPLT__Image__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Image__c</fullName>
    <description>Image that represents a Level. It can be an uploaded image or an entered URL.</description>
    <inlineHelpText>Choose an image for your Level. You can either upload an image or enter URL.</inlineHelpText>
    <label>Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>