force-app/main/default/objects/FieloPLT__Level__c/fields/FieloPLT__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When ticked, this Level can be applied to Members.</description>
    <inlineHelpText>When ticked, this Level can be applied to Members.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>