force-app/main/default/objects/FieloPLT__Level__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Program where the Level belongs to.</description>
    <inlineHelpText>Choose the Program where the Level belongs to.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Levels</relationshipLabel>
    <relationshipName>Levels</relationshipName>
    <type>Lookup</type>
</CustomField>