force-app/main/default/objects/FieloPLT__Level__c/validationRules/FieloPLT__ModifyProgram.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ModifyProgram</fullName>
    <active>true</active>
    <description>The Program can&apos;t be changed.</description>
    <errorConditionFormula>ISCHANGED(FieloPLT__Program__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(FieloPLT__Program__c)))</errorConditionFormula>
    <errorDisplayField>FieloPLT__Program__c</errorDisplayField>
    <errorMessage>The Program can&apos;t be changed.</errorMessage>
</ValidationRule>